Humongous refactor